# bitcoin_fake_practice

./: Cargo.toml  README.md  main.rs
chain/: demo_block.rs  demo_block_chain.rs  demo_block_header.rs  mod.rs
client/: demo_client.rs  demo_node_wrapped.rs  demo_p2pclient.rs  demo_peer_client.rs  demo_service.rs  mod.rs
consensus/: demo_mining.rs  demo_pow.rs  demo_sync.rs  demo_tx_state.rs  mod.rs
crypto/: demo_bytes.rs  demo_crypto.rs  demo_serializer.rs  mod.rs
doc/: readme.md
error/: demo_error.rs  mod.rs
examples/: chain.rs  tx.rs
network/: demo_msg.rs  demo_net_service.rs  demo_node_status.rs  mod.rs
network/behaviour/: demo_behaviour.rs  demo_behaviour_builder.rs  demo_event_handler.rs  mod.rs
network/codec/: demo_codec.rs  demo_codec_prev.rs  demo_protocol.rs  mod.rs
network/config/: demo_id_addr_pair.rs  demo_p2pconfig.rs  demo_req_res_body.rs  demo_request.rs  demo_request_response_config.rs  demo_response.rs  mod.rs
network/node/: demo_net_node.rs  demo_node_inner.rs  mod.rs
server/: demo_server.rs  demo_server_event_handler.rs  demo_service.rs  mod.rs
src/: error.rs  lib.rs  server.rs
src/chain/: block.rs  blockchain.rs  mod.rs
src/consensus/: mod.rs  pow.rs
src/crypto/: merkle.rs  mod.rs  random.rs  ripemd160.rs  serializer.rs  sha256.rs
src/miner/: mining.rs  mod.rs
src/network/: dns_seed.rs  mod.rs  net.rs  net_behaviour.rs  net_message.rs
src/storage/: mod.rs  sleddb.rs
src/stroage/: mod.rs  sleddb.rs
src/transaction_base/: mod.rs  transaction.rs  tx_verify.rs
src/wallet/: wallet.rs
src/wallet_base/: wallet.rs
storage/: demo_chain_state.rs  demo_chain_stroage.rs  demo_memory_state.rs  demo_memory_storage.rs  demo_state.rs  demo_storage.rs  demo_utxo_state.rs  demo_utxo_storage.rs  mod.rs
transaction/: demo_transaction.rs  demo_tx_in.rs  demo_tx_out.rs  demo_utxo.rs  mod.rs
wallet/: demo_wallet.rs  demo_wallet_map.rs  mod.rs
