[package]
name = "bitcoin_fake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "chain"
path = "examples/chain.rs"

[[example]]
name = "transaction"
path = "examples/tx.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
bs58 = "0.5.0"
chrono = "0.4.31"
crypto = "0.5.1"
futures = "0.3.29"
libp2p = { version = "0.53.1", features = ["gossipsub", "mdns", "noise", "tcp", "yamux", "macros", "tokio", "async-std"] }
libp2p-swarm = "0.44.0"
num256 = "0.5.1"
once_cell = "1.18.0"
ring = "0.17.5"
ripemd = "0.1.3"
rs_merkle = "1.4.1"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
sled = "0.34.7"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["io-util", "io-std", "sync", "macros", "rt-multi-thread"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"